--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: Inter, Segoe UI, Roboto, Arial, sans-serif;
-  background: var(--bg);
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
   color: #0c1428;
 }
 
@@ -23,11 +23,13 @@ body {
   display: flex;
   height: 100vh;
   overflow: hidden;
-  background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+  /*   background: linear-gradient(135deg, #764ba2 0%, #667eea 100%); */
 }
 
 /* Sidebar */
 .sidebar {
+  margin-left: 10px;
+  margin-top: 10px;
   width: var(--sidebar-width);
   min-width: var(--sidebar-min);
   background: var(--card);
@@ -45,23 +47,23 @@ body {
 }
 
 .sidebar-header {
-  padding: 0.5rem;
+  padding: 0.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: linear-gradient(180deg, #667eea 0%, #764ba2 100%);
   color: #fff;
 }
 .sidebar-header button {
-  margin-top: 0.5rem;
+  margin-top: 0rem;
   padding: 0.4rem 0.6rem;
   background: #fff;
   color: #667eea;
   border: 0;
   border-radius: 6px;
   cursor: pointer;
-  font-size: 0.875rem;
+  font-size: 1rem;
   width: 100%;
 }
 
@@ -133,8 +135,7 @@ body {
 }
 
 .btn-save {
-  background: #4caf50;
-  color: white;
+  background: white;
 }
 
 .btn-save:hover {
@@ -142,8 +143,7 @@ body {
 }
 
 .btn-delete {
-  background: #f44336;
-  color: white;
+  background: white;
 }
 
 .btn-delete:hover {
